Changelog for Poi
=================


2.0.3 (unreleased)
------------------

- Refactored all email notifications to templates. This should make it
  easier to customize and translate.
  [maurits]

- Fixed example link for collective changesets.
  [maurits]

- When clicking on the suggested login button, show a popup.
  [maurits]

- Removed htmlrender.py.
  [maurits]

- Refactored the email notifications by creating a page template
  ``browser/poi_mail.pt`` and a css file ``skins/Poi/poi-email.css``
  and using that instead of hardcoded stuff in a python file
  ``htmlrender.py``.
  Fixes http://plone.org/products/poi/issues/251
  [maurits]

- Allow assigning portlets to trackers and issues.
  Fixes http://plone.org/products/poi/issues/250
  [maurits]

- Make sure the issue-info-box does not inherit a 100% width, as is the
  case on plone.org at the moment (6 September 2011), which is far too
  wide for this little box.
  See http://plone.org/products/poi/issues/249
  [Maurits]

- Added MANIFEST.in file so that .mo translation files will be
  included in source distributions (with help from zest.releaser and
  zest.pocompile).
  Refs http://plone.org/products/poi/issues/248
  [maurits]


2.0.2 (2011-04-09)
------------------

- Depend on Products.CMFPlone instead of Plone to improve Plone 4.1
  compatibility.
  [maurits]

- Do not fail when rendering a response that has a text/x-html-safe
  mimetype or where the html transform returns nothing.  (Merged from
  1.2 branch.)
  [maurits]

- Review French translations
  [toutpt]


2.0.1 (2010-11-11)
------------------

- Split profile registration and upgrade steps from configure.zcml
  into a new profiles.zcml as it is quite big already.
  [maurits]

- Fix: for the 'no change' label and input the ids were empty.
  [thomasdesvenain]

- Removed our dependency on collective.autopermission, as its
  functionality is integrated in Zope 2.12 (Plone 4.0).
  [maurits]


2.0 (2010-10-14)
----------------
