@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<object name="portal_properties" meta_type="Plone Properties Tool">
+ <object name="navtree_properties" meta_type="Plone Property Sheet">
+  <property name="parentMetaTypesNotToQuery" type="lines">
+   <element value="PoiPscTracker" remove="True" />
+   <element value="PoiTracker" remove="True" />
+   <element value="PoiIssue" remove="True" />
+  </property>
+ </object>
+</object>
